--- a/foney/popup.html
+++ b/foney/popup.html
@@ -38,7 +38,7 @@
     <div class="gstl_0 sbib_a" style="height: 38px; border: 1px solid #4d90fe; width: 584px;">
         <div class="sbib_b" id="sb_ifc0" dir="ltr">
             <div id="gs_lc0" style="position: relative;">
-                <input class="gsfi" id="lst-ib" maxlength="2048" name="q" autocomplete="off" title="Search" type="text"
+                <input id="input-job-number" class="gsfi" maxlength="2048" name="q" autocomplete="off" title="Search" type="text"
                        value="" role="combobox" dir="ltr" spellcheck="false"
                        style="border: none; padding: 0px; margin: 0px; height: auto; width: 100%; position: absolute;
                         z-index: 6; left: 0px; outline: none; background: url(&quot;data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D&quot;) transparent;">
